--- a/FewBox.Service.Job/appsettings.json
+++ b/FewBox.Service.Job/appsettings.json
@@ -1,6 +1,16 @@
 {
-    "Endpoint":{
-        "Protocol": "https",
-        "Host": "fewbox.com"
-    }
+    "EndpointEvents": [
+        {
+            "EndPoint": {
+                "Protocol": "https",
+                "Host": "httpbin.org",
+                "Port": 443
+            },
+            "Event": {
+                "Path": "post",
+                "Type": "Post",
+                "Body": "{'fewbox':'landpy'}"
+            }
+        }
+    ]
 }
