--- a/FewBox.Service.Job/FewBox.Service.Job.csproj
+++ b/FewBox.Service.Job/FewBox.Service.Job.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Version>1.0.0</Version>
     <Company>FewBox</Company>
     <Authors>FewBox</Authors>
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FewBox.Core.Utility" Version="1.0.32" />
+    <PackageReference Include="FewBox.Core.Utility" Version="1.0.41" />
   </ItemGroup>
 
 </Project>
