--- a/FewBox.Service.Job/appsettings.json
+++ b/FewBox.Service.Job/appsettings.json
@@ -6,7 +6,7 @@
     },
     "EndpointEvents": [
         {
-            "EndPoint": {
+            "Endpoint": {
                 "Protocol": "https",
                 "Host": "httpbin.org",
                 "Port": 443
