--- a/FewBox.Service.Job/appsettings.Development.json
+++ b/FewBox.Service.Job/appsettings.Development.json
@@ -6,7 +6,8 @@
     },
     "EndpointEvents": [
         {
-            "EndPoint": {
+            "JWTToken" : "",
+            "Endpoint": {
                 "Protocol": "https",
                 "Host": "httpbin.org",
                 "Port": 443
