--- a/FewBox.Service.Job/appsettings.json
+++ b/FewBox.Service.Job/appsettings.json
@@ -6,6 +6,7 @@
     },
     "EndpointEvents": [
         {
+            "JWTToken" : "",
             "Endpoint": {
                 "Protocol": "https",
                 "Host": "httpbin.org",
